Adding more classes

--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -24,26 +24,28 @@ set(
 	ENGINE_HEADERS
 	engine/core/Component.h
 	engine/core/CoreFactory.h
+	engine/core/Displacement.h
 	engine/core/GraphicCore.h
 	engine/core/IdManager.h
 	engine/core/Types.h
 	engine/core/UniqueId.h
-	engine/entity/Decor.h
 	engine/entity/Entity.h
 	engine/entity/Squad.h
 	engine/map/Cell.h
+	engine/map/Environment.h
 	engine/map/Map.h
 )
 
 set(
 	ENGINE_SOURCES
 	engine/core/CoreFactory.cpp
+	engine/core/Displacement.cpp
 	engine/core/GraphicCore.cpp
 	engine/core/IdManager.cpp
-	engine/entity/Decor.cpp
 	engine/entity/Entity.cpp
 	engine/entity/Squad.cpp
 	engine/map/Cell.cpp
+	engine/map/Environment.cpp
 	engine/map/Map.cpp
 )
 
