--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "dependencies\\SFML"]
-	path = dependencies\\SFML
+[submodule "dependencies/SFML"]
+	path = dependencies/SFML
 	url = https://github.com/SFML/SFML.git
