Update travis file

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,16 @@
 language: cpp
 
+os:
+  - linux
+
 compiler:
   - gcc
+  - clang
+
+addons:
+  apt:
+    packages:
+      - libsfml-dev
 
 before_script:
   - mkdir build
