Fix windows build

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,21 +10,27 @@ set(DEPENDENCIES_DIR "${PROJECT_DIR}/dependencies")
 set(SOURCE_DIR "${PROJECT_DIR}/source")
 set(PROJECT_PREFIX "${OUTPUT_DIR}/PREFIX")
 
-if(NOT BUILD_TYPE)
-  set(BUILD_TYPE "DEBUG")
-endif()
-
-set(CMAKE_CXX_FLAGS_${BUILD_TYPE} "${CMAKE_CXX_FLAGS_${BUILD_TYPE}} -fsanitize=address")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fsanitize=address")
 
 #Project output
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${OUTPUT_DIR}/bin")
 
 ### DEPENDANCIES ###
 # SFML
-set(SFML_DIR "${DEPENDENCIES_DIR}/SFML/cmake")
+if(WIN32)
+	set(SFML_DIR "${DEPENDENCIES_DIR}/SFML-2.5.0/lib/cmake/SFML")
+	if(NOT EXISTS "${DEPENDENCIES_DIR}/SFML-2.5.0")
+		file(DOWNLOAD "https://www.sfml-dev.org/files/SFML-2.5.0-windows-vc15-32-bit.zip" "${DEPENDENCIES_DIR}/SFML_WIN.zip")
+		execute_process(
+			WORKING_DIRECTORY "${PROJECT_DIR}/dependencies/"
+			COMMAND unzip SFML_WIN.zip
+		)
+	endif()
+	set(OTHER_INCLUDE_H "${DEPENDENCIES_DIR}/SFML-2.5.0/include")
+endif()
 find_package(SFML 2.5 COMPONENTS system window graphics network audio)
 if(NOT SFML_FOUND)
-  message(FATAL_ERROR "You need SFML library")
+	message(FATAL_ERROR "You need SFML library")
 endif()
 ###################
 
