--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ compiler:
   - clang
 
 install:
-  - sudo apt-get install libsfml-dev
+  - sudo apt-get install g++-5
 
 before_script:
   - mkdir build
